--- a/scaffolder-templates/create-microservice/template.yaml
+++ b/scaffolder-templates/create-microservice/template.yaml
@@ -8,7 +8,7 @@ metadata:
     - Python
     - MySQL 
 spec:
-  owner: snps-srikako
+  owner: user:default/snps-srikako
   type: Microservice
   parameters:
     - title: Microservice Details
