--- a/scaffolder-templates/create-microservice/template.yaml
+++ b/scaffolder-templates/create-microservice/template.yaml
@@ -33,7 +33,7 @@ spec:
           ui:options:
             allowedKinds:
               - Group
-    - title: Provide GitHub Details
+    - title: Provide Repository Details
       required:
         - repoUrl
       properties:
