--- a/scaffolder-templates/harness/test.yaml
+++ b/scaffolder-templates/harness/test.yaml
@@ -27,8 +27,8 @@ spec:
       action: hs-client:run-pipeline
       input:
         pipeline_params: 
-          resource_group_type: ${{ resource_group_type }}
-          resource_group_name: ${{ resource_group_name }}
+          - resource_group_type: '${{ resource_group_type }}'
+          - resource_group_name: '${{ resource_group_name }}
   output:
       text:
         - title: 'Pipeline executed successfully'
