--- a/scaffolder-templates/harness/test.yaml
+++ b/scaffolder-templates/harness/test.yaml
@@ -30,8 +30,8 @@ spec:
           title: Environment Name
           type: string
           description: Environment Name for the storage account
-        enable_file_service:
-          title: Enable File Service
+        enable_blob_service:
+          title: Enable Blob Service
           type: boolean
           ui:widget: radio
         enable_file_share:
@@ -67,7 +67,7 @@ spec:
         organization_id: "PlatformOperations"
         project_id: "platformvirtualdatacenter"
         account_id: "WhWgKpKNQSuUlombNLvtRw"
-        pipeline_params: '[{"resource_group_type": "${{ parameters.resource_group_type }}", "resource_group_name": "${{parameters.resource_group_name}}", "storage_account_name": "${{ parameters.storage_account_name }}", "env_name": "${{ parameters.env_name}}", "enable_file_service": "${{parameters.enable_file_service}}","enable_file_share": "${{parameters.enable_file_share}}","enable_file_service": "${{parameters.enable_file_service}}","enable_table_service": "${{parameters.enable_table_service}}","blob_container_name": "${{parameters.blob_container_name}}","file_share_name": "${{parameters.file_share_name}}","file_share_name": "${{parameters.file_share_name}}","table_name": "${{parameters.table_name}}","azure_ad_group_name": "${{parameters.azure_ad_group_name}}"}]'
+        pipeline_params: '[{"resource_group_type": "${{ parameters.resource_group_type }}", "resource_group_name": "${{parameters.resource_group_name}}", "storage_account_name": "${{ parameters.storage_account_name }}", "env_name": "${{ parameters.env_name}}", "enable_blob_service": "${{parameters.enable_blob_service}}","enable_file_share": "${{parameters.enable_file_share}}","enable_file_service": "${{parameters.enable_file_service}}","enable_table_service": "${{parameters.enable_table_service}}","blob_container_name": "${{parameters.blob_container_name}}","file_share_name": "${{parameters.file_share_name}}","file_share_name": "${{parameters.file_share_name}}","table_name": "${{parameters.table_name}}","azure_ad_group_name": "${{parameters.azure_ad_group_name}}"}]'
   output:
       text:
         - title: 'Pipeline executed successfully'
